Fixed the news banner text overflow. Also added hover effect on images in the gallery

--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 .columnimg {
-    margin-top: 8px;
     vertical-align: middle;
     width: 100%;
-  }
+}
